minor correction - now all set up for content creation

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,6 +1,6 @@
-head {
+html {
     font-family: Helvetica;
     font-size: 22px;
     color: seashell;
-    background-color: rgba(red, green, blue, 0.9);
+    background-color: rgba(0, 0, 0, 0.9);
 }
