--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,6 @@
+
+
+/*General Styling*/
 html {
     font-family: Helvetica;
     font-size: 22px;
@@ -5,3 +8,21 @@ html {
     background-color: rgba(0, 0, 0, 0.9);
     text-align: center;
 }
+
+/*header*/
+
+
+
+/*intro section*/
+
+
+
+/*Tea of the Month section*/
+
+
+
+/*Locations section*/
+
+
+
+/*footer*/
