--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -10,8 +10,42 @@ html {
 }
 
 /*header*/
+header {
+    position: fixed;
+    z-index: 100;
+    height: 69px;
+    width: 100%;
+    border-bottom: 1px solid seashell;
+}
 
+.logo img {
+    height: 50px;
+    margin-left: 10px;
+}
 
+nav {
+    display: inline-flex;
+    width: 100%;
+}
+
+ul {
+    display: inline-flex;
+    width: 100%;
+    margin-right: 20px;
+    list-style-type: none;
+    justify-content: flex-end;
+
+}
+
+li {
+    text-decoration: underline;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+a {
+    color: seashell;
+}
 
 /*intro section*/
 
