--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11,7 +11,6 @@ html {
 
 /*header*/
 header {
-    position: fixed;
     z-index: 100;
     height: 69px;
     width: 100%;
@@ -49,6 +48,31 @@ a {
 
 /*intro section*/
 
+.intro {
+    height: 700px;
+    width: 1200px;
+    background-image: url(../images/img-mission-background.jpg);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.headlines {
+    background-color: rgba(0, 0, 0, 0.8);
+    width: 100%;
+    height: auto;
+}
+
+
+h2 {
+    margin: 0;
+    padding: 10px;
+}
+
+h4 {
+    margin: 0;
+    padding: 10px;
+}
 
 
 /*Tea of the Month section*/
