add margin-top to .tea-of-the-month

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -78,6 +78,7 @@ h4 {
     height: auto;
     display: inline-block;
     justify-content: center;
+    margin-top: 40px;
 }
 
 .tea-of-the-month img {
