--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -48,10 +48,12 @@ a {
 
 /*main section*/
 
+/*introduction section*/
 .intro {
     height: 700px;
     width: 1200px;
     background-image: url(../images/img-mission-background.jpg);
+    background-size: cover;
     display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -72,6 +74,8 @@ h4 {
     margin: 0;
     padding: 10px;
 }
+
+/*the-of-the-month section*/
 
 .tea-of-the-month{
     width: 1000px;
@@ -95,6 +99,41 @@ h4 {
 
 .image-container div {
     margin: 10px;
+}
+
+/*location section*/
+.locations {
+    height: 580px;
+    width: 1200px;
+    margin-top: 60px;
+    background-image: url(../images/img-locations-background.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.headline {
+    width: 100%;
+    height: 40px;
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.locations-container {
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.locations-container div {
+    width: 300px;
+    height: auto;
+    background-color: black;
+    margin: 20px;
 }
 
 /*footer*/
