--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -137,3 +137,22 @@ h4 {
 }
 
 /*footer*/
+
+footer h4 {
+    margin-bottom: 10px;
+    margin-left: 20px;
+    font-size: 0.8rem;
+    font-weight: normal;
+}
+
+.contact {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    height: 200px;
+}
+
+.copyright {
+    height: auto;
+    text-align: left;
+}
