--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,7 @@
 
 
 /*General Styling*/
-html {
+body {
     font-family: Helvetica;
     font-size: 22px;
     color: seashell;
@@ -9,21 +9,32 @@ html {
     text-align: center;
 }
 
+
 /*header*/
 header {
     height: 69px;
     width: 100%;
     border-bottom: 1px solid seashell;
+    position: fixed;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.9);
+    margin: 0;
+}
+
+.intro {
+    margin-top: 62px;
 }
 
 .logo img {
     height: 50px;
     margin-left: 10px;
+    margin-top: 10px;
 }
 
 nav {
     display: inline-flex;
     width: 100%;
+    margin: 0 0 0 0;
 }
 
 ul {
